@@ -44,133 +44,129 @@ import pt.ist.fenixWebFramework.security.UserView;
  */
 public class InsertCurricularCourseScopeFromAnotherDA extends FenixDispatchAction {
 
-    public ActionForward prepareInsert(ActionMapping mapping, ActionForm form,
-            HttpServletRequest request, HttpServletResponse response) throws FenixActionException, FenixFilterException {
+    public ActionForward prepareInsert(ActionMapping mapping, ActionForm form, HttpServletRequest request,
+	    HttpServletResponse response) throws FenixActionException, FenixFilterException {
 
-        DynaActionForm dynaForm = (DynaActionForm) form;
+	DynaActionForm dynaForm = (DynaActionForm) form;
 
-        Integer degreeCurricularPlanId = new Integer(request.getParameter("degreeCurricularPlanId"));
-        Integer curricularCourseScopeId = new Integer(request.getParameter("curricularCourseScopeId"));
-        InfoCurricularCourseScope oldInfoCurricularCourseScope = null;
+	Integer degreeCurricularPlanId = new Integer(request.getParameter("degreeCurricularPlanId"));
+	Integer curricularCourseScopeId = new Integer(request.getParameter("curricularCourseScopeId"));
+	InfoCurricularCourseScope oldInfoCurricularCourseScope = null;
 
-        Object args[] = { curricularCourseScopeId };
+	Object args[] = { curricularCourseScopeId };
 
-        try {
-            oldInfoCurricularCourseScope = (InfoCurricularCourseScope) ServiceUtils.executeService(
-                    "ReadCurricularCourseScope", args);
-        } catch (NonExistingServiceException ex) {
-            throw new NonExistingActionException("message.nonExistingCurricularCourseScope", mapping
-                    .findForward("readCurricularCourse"));
-        } catch (FenixServiceException fenixServiceException) {
-            throw new FenixActionException(fenixServiceException.getMessage());
-        }
+	try {
+	    oldInfoCurricularCourseScope = (InfoCurricularCourseScope) ServiceUtils.executeService("ReadCurricularCourseScope",
+		    args);
+	} catch (NonExistingServiceException ex) {
+	    throw new NonExistingActionException("message.nonExistingCurricularCourseScope", mapping
+		    .findForward("readCurricularCourse"));
+	} catch (FenixServiceException fenixServiceException) {
+	    throw new FenixActionException(fenixServiceException.getMessage());
+	}
 
-        if (oldInfoCurricularCourseScope.getBeginDate() != null)
-            dynaForm.set("beginDate", Data.format2DayMonthYear(oldInfoCurricularCourseScope
-                    .getBeginDate().getTime(), "/"));
+	if (oldInfoCurricularCourseScope.getBeginDate() != null)
+	    dynaForm.set("beginDate", Data.format2DayMonthYear(oldInfoCurricularCourseScope.getBeginDate().getTime(), "/"));
 
-        dynaForm
-                .set("branchId", oldInfoCurricularCourseScope.getInfoBranch().getIdInternal().toString());
-        dynaForm.set("curricularSemesterId", oldInfoCurricularCourseScope.getInfoCurricularSemester()
-                .getIdInternal().toString());
-        dynaForm.set("anotation",oldInfoCurricularCourseScope.getAnotation());
+	dynaForm.set("branchId", oldInfoCurricularCourseScope.getInfoBranch().getIdInternal().toString());
+	dynaForm.set("curricularSemesterId", oldInfoCurricularCourseScope.getInfoCurricularSemester().getIdInternal().toString());
+	dynaForm.set("anotation", oldInfoCurricularCourseScope.getAnotation());
 
-        // obtain branches to show in jsp
-        Object[] args1 = { degreeCurricularPlanId };
-        List result = null;
-        try {
-            result = (List) ServiceUtils.executeService("ReadBranchesByDegreeCurricularPlan",
-                    args1);
-        } catch (NonExistingServiceException ex) {
-            throw new NonExistingActionException("message.nonExistingDegreeCurricularPlan", mapping
-                    .findForward("readDegree"));
-        } catch (FenixServiceException e) {
-            throw new FenixActionException(e);
-        }
+	// obtain branches to show in jsp
+	Object[] args1 = { degreeCurricularPlanId };
+	List result = null;
+	try {
+	    result = (List) ServiceUtils.executeService("ReadBranchesByDegreeCurricularPlan", args1);
+	} catch (NonExistingServiceException ex) {
+	    throw new NonExistingActionException("message.nonExistingDegreeCurricularPlan", mapping.findForward("readDegree"));
+	} catch (FenixServiceException e) {
+	    throw new FenixActionException(e);
+	}
 
-        if (result == null)
-            throw new NonExistingActionException("message.insert.degreeCurricularCourseScope.error",
-                    mapping.findForward("readCurricularCourse"));
+	if (result == null)
+	    throw new NonExistingActionException("message.insert.degreeCurricularCourseScope.error", mapping
+		    .findForward("readCurricularCourse"));
 
-        //	creation of bean of InfoBranches for use in jsp
-        List branchesList = new ArrayList();
-        InfoBranch infoBranch;
-        Iterator iter = result.iterator();
-        String label, value;
-        while (iter.hasNext()) {
-            infoBranch = (InfoBranch) iter.next();
-            value = infoBranch.getIdInternal().toString();
-            label = infoBranch.getCode() + " - " + infoBranch.getName();
-            branchesList.add(new LabelValueBean(label, value));
-        }
+	// creation of bean of InfoBranches for use in jsp
+	List branchesList = new ArrayList();
+	InfoBranch infoBranch;
+	Iterator iter = result.iterator();
+	String label, value;
+	while (iter.hasNext()) {
+	    infoBranch = (InfoBranch) iter.next();
+	    value = infoBranch.getIdInternal().toString();
+	    label = infoBranch.getCode() + " - " + infoBranch.getName();
+	    branchesList.add(new LabelValueBean(label, value));
+	}
 
-        // obtain execution periods to show in jsp
-        List<InfoExecutionPeriod> infoExecutionPeriods = null;
-        try {
-            infoExecutionPeriods = (List) ServiceUtils.executeService("ReadExecutionPeriods");
+	// obtain execution periods to show in jsp
+	List<InfoExecutionPeriod> infoExecutionPeriods = null;
+	try {
+	    infoExecutionPeriods = (List) ServiceUtils.executeService("ReadExecutionPeriods");
 
-        } catch (FenixServiceException e) {
-            throw new FenixActionException(e);
-        }
+	} catch (FenixServiceException e) {
+	    throw new FenixActionException(e);
+	}
 
-        if (infoExecutionPeriods == null)
-            throw new NonExistingActionException("message.insert.executionPeriods.error", mapping
-                    .findForward("readCurricularCourse"));
+	if (infoExecutionPeriods == null)
+	    throw new NonExistingActionException("message.insert.executionPeriods.error", mapping
+		    .findForward("readCurricularCourse"));
 
-        List executionPeriodsLabels = new ArrayList();
-        String labelExecutionPeriod, valueExecutionPeriod;
-        for (final InfoExecutionPeriod infoExecutionPeriod : infoExecutionPeriods) {
-            valueExecutionPeriod = Data.format2DayMonthYear(infoExecutionPeriod.getBeginDate(), "/");
-            labelExecutionPeriod = Data.format2DayMonthYear(infoExecutionPeriod.getBeginDate(), "/");
-            executionPeriodsLabels.add(new LabelValueBean(labelExecutionPeriod, valueExecutionPeriod));
-        }
+	List executionPeriodsLabels = new ArrayList();
+	String labelExecutionPeriod, valueExecutionPeriod;
+	for (final InfoExecutionPeriod infoExecutionPeriod : infoExecutionPeriods) {
+	    valueExecutionPeriod = Data.format2DayMonthYear(infoExecutionPeriod.getBeginDate(), "/");
+	    labelExecutionPeriod = Data.format2DayMonthYear(infoExecutionPeriod.getBeginDate(), "/");
+	    executionPeriodsLabels.add(new LabelValueBean(labelExecutionPeriod, valueExecutionPeriod));
+	}
 
-        request.setAttribute("executionPeriodsLabels", executionPeriodsLabels);
-        request.setAttribute("branchesList", branchesList);
+	request.setAttribute("executionPeriodsLabels", executionPeriodsLabels);
+	request.setAttribute("branchesList", branchesList);
 
-        return mapping.findForward("insertCurricularCourseScope");
+	return mapping.findForward("insertCurricularCourseScope");
     }
 
-    public ActionForward insert(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws FenixActionException, FenixFilterException {
+    public ActionForward insert(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response)
+	    throws FenixActionException, FenixFilterException {
 
-        DynaActionForm dynaForm = (DynaValidatorForm) form;
+	DynaActionForm dynaForm = (DynaValidatorForm) form;
 
-        InfoCurricularCourseScopeEditor newInfoCurricularCourseScope = new InfoCurricularCourseScopeEditor();
+	InfoCurricularCourseScopeEditor newInfoCurricularCourseScope = new InfoCurricularCourseScopeEditor();
 
-        String curricularSemesterIdString = (String) dynaForm.get("curricularSemesterId");
-        String branchIdString = (String) dynaForm.get("branchId");
-        String beginDateString = (String) dynaForm.get("beginDate");
+	String curricularSemesterIdString = (String) dynaForm.get("curricularSemesterId");
+	String branchIdString = (String) dynaForm.get("branchId");
+	String beginDateString = (String) dynaForm.get("beginDate");
 
-        Integer curricularSemesterId = new Integer(curricularSemesterIdString);
-        InfoCurricularSemester infoCurricularSemester = new InfoCurricularSemester(rootDomainObject.readCurricularSemesterByOID(curricularSemesterId));
-        newInfoCurricularCourseScope.setInfoCurricularSemester(infoCurricularSemester);
+	Integer curricularSemesterId = new Integer(curricularSemesterIdString);
+	InfoCurricularSemester infoCurricularSemester = new InfoCurricularSemester(rootDomainObject
+		.readCurricularSemesterByOID(curricularSemesterId));
+	newInfoCurricularCourseScope.setInfoCurricularSemester(infoCurricularSemester);
 
-        Integer branchId = new Integer(branchIdString);
-        InfoBranch infoBranch = new InfoBranch(rootDomainObject.readBranchByOID(branchId));
-        newInfoCurricularCourseScope.setInfoBranch(infoBranch);
-        final CurricularCourse curricularCourse = (CurricularCourse) rootDomainObject.
-				readDegreeModuleByOID(Integer.valueOf(request.getParameter("curricularCourseId")));
-        InfoCurricularCourse infoCurricularCourse = new InfoCurricularCourse(curricularCourse);
-        newInfoCurricularCourseScope.setInfoCurricularCourse(infoCurricularCourse);
+	Integer branchId = new Integer(branchIdString);
+	InfoBranch infoBranch = new InfoBranch(rootDomainObject.readBranchByOID(branchId));
+	newInfoCurricularCourseScope.setInfoBranch(infoBranch);
+	final CurricularCourse curricularCourse = (CurricularCourse) rootDomainObject.readDegreeModuleByOID(Integer
+		.valueOf(request.getParameter("curricularCourseId")));
+	InfoCurricularCourse infoCurricularCourse = new InfoCurricularCourse(curricularCourse);
+	newInfoCurricularCourseScope.setInfoCurricularCourse(infoCurricularCourse);
 
-        if (beginDateString.compareTo("") != 0) {
-            Calendar beginDateCalendar = Calendar.getInstance();
-            beginDateCalendar.setTime(Data.convertStringDate(beginDateString, "/"));
-            newInfoCurricularCourseScope.setBeginDate(beginDateCalendar);
-        }
+	if (beginDateString.compareTo("") != 0) {
+	    Calendar beginDateCalendar = Calendar.getInstance();
+	    beginDateCalendar.setTime(Data.convertStringDate(beginDateString, "/"));
+	    newInfoCurricularCourseScope.setBeginDate(beginDateCalendar);
+	}
 
-        Object args[] = { newInfoCurricularCourseScope };
-        try {
-            ServiceUtils.executeService("InsertCurricularCourseScopeAtCurricularCourse", args);
-        } catch (ExistingServiceException e) {
-            throw new ExistingActionException(e.getMessage(), e);
-        } catch (FenixServiceException fenixServiceException) {
-            throw new FenixActionException(fenixServiceException);
-        }
+	Object args[] = { newInfoCurricularCourseScope };
+	try {
+	    ServiceUtils.executeService("InsertCurricularCourseScopeAtCurricularCourse", args);
+	} catch (ExistingServiceException e) {
+	    throw new ExistingActionException(e.getMessage(), e);
+	} catch (FenixServiceException fenixServiceException) {
+	    throw new FenixActionException(fenixServiceException);
+	}
 
-        request.setAttribute("infoCurricularCourseScope", newInfoCurricularCourseScope);
+	request.setAttribute("infoCurricularCourseScope", newInfoCurricularCourseScope);
 
-        return mapping.findForward("readCurricularCourse");
+	return mapping.findForward("readCurricularCourse");
     }
 }
